--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          public-key-location: classpath:authz.pub
+          issuer-uri: http://localhost:9000
           audiences: cashcard-client
 
 spring.datasource.url: jdbc:h2:mem:cashcardsdb
